tests/NormalTests/paczka1/fuzzy1/36398902.err
Error in line 2: gxbDX8GTG2 S540 16,1
Error in line 8: gxbDX8GTG2 A707 90,1
Error in line 12: A707 A697 28,4
Error in line 16: A707 S540 37,0
Error in line 26: gxbDX8GTG2 A697 77,9
